@@ -21,13 +21,13 @@ Open a browser as an anonymous user.
 Add a date criterion for the subject/keywords.
 
     >>> foo_topic.addCriterion(
-    ...     'effectiveRange', 'ATDateCriteria')
+    ...     'effectiveRange', 'ATFriendlyDateCriteria')
     <ATDateCriteria at
-    /plone/Members/test_user_1_/foo-topic-title/crit__effectiveRange_ATDateCriteria>
+    /plone/Members/test_user_1_/foo-topic-title/crit__effectiveRange_ATFriendlyDateCriteria>
 
 Designate the criterion's field as a form field.
 
-    >>> crit = foo_topic.getCriterion('effectiveRange_ATDateCriteria')
+    >>> crit = foo_topic.getCriterion('effectiveRange_ATFriendlyDateCriteria')
     >>> crit.setFormFields(['value', 'dateRange', 'operation'])
     
 When viewing the collection in a browser date fields will be
@@ -36,5 +36,5 @@ rendered for the field.
     >>> browser.open(foo_topic.absolute_url())
     >>> browser.getControl('Effective Range')
     <ListControl
-    name='form_crit__effectiveRange_ATDateCriteria_value'
+    name='form_crit__effectiveRange_ATFriendlyDateCriteria_value'
     type='select'>
